--- a/index.html
+++ b/index.html
@@ -155,9 +155,6 @@
                         <a class="tag" href="cites/acl2021_retrack.bib" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Cite</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://aclanthology.org/2021.acl-demo.39.mp4" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video</a>
-                        <span class="tagsep">|</span>
-                    <a class="tag" href="bilibili.com/video/BV1Wp4y1z7f2/" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video(Chinese)</a>
-
                 </p>
             </div>
 
@@ -170,14 +167,17 @@
                     <span class="conf"><a class="confshort" href="https://nips.cc/Conferences/2020">NeurIPS 2020</a> | Advances in Neural Information Processing Systems</span><br>
                     <a class="tag" href="http://proceedings.neurips.cc/paper/2020/file/83adc9225e4deb67d7ce42d58fe5157c-Paper.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
+                    <a class="tag" href="slides/NeurIPS2020-Compositional-Slides.pdf" target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
+                    <span class="tagsep">|</span>
                     <a class="tag" href="https://github.com/microsoft/ContextualSP/tree/master/compositional_generalization" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Code</a>
                     <span class="tagsep">|</span>
                         <a class="tag" href="cites/neurips2020_com.bib" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Cite</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://slideslive.com/38937789/compositional-generalization-by-learning-analytical-expressions" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video</a>
                     <span class="tagsep">|</span>
+                    <a class="tag" href="https://bilibili.com/video/BV1Wp4y1z7f2/" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video(Chinese)</a>
+                    <span class="tagsep">|</span>
                    <a class="tag" href="https://mp.weixin.qq.com/s/8Cv76I4SUfnPm88cAqrBRg" target="_blank"><i class="fa fa-book" aria-hidden="true"></i> Blog(Chinese)</a>
-
                 </p>
             </div>
 
@@ -213,7 +213,7 @@
                         <span class="papertitle">Semantic Parsing of Natural Language from Weakly Labeled Data</span><br>
                         <i class="fa fa-desktop" aria-hidden="true"></i> <b>Thesis Talk</b>: Aiming at the challenging problems of small-scale program annotation, small-variety domain annotation, weak supervision of answer annotation and the difficulties of conversation annotation, we propose improving the program-oriented compositional generalization capabilities, improving the knowledge-base domain generalization capabilities, improving the performance of answer-driven semantic parsing model under weak supervision, and rapidly building conversational semantic parsing systems under semi-supervision.<br>
                         <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: Beihang University</span><br>
-                        <a class="tag" href="slides/"
+                        <a class="tag" href="slides/Thesis-Talk-Qian.pdf"
                            target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
                         <span class="tagsep">|</span>
                         <a class="tag" href="slides/Thesis-Qian.pdf"
@@ -225,7 +225,7 @@
                     <p class="paper my-2 pl-2">
                         <span class="papertitle">Towards Data-Efficient Semantic Parsing</span><br>
                         <i class="fa fa-desktop" aria-hidden="true"></i> <b>Job talk</b>: I built methods with program data, task data, and no data to make semantic parsers tackle with limited data. First, after we have program data, I strive to improve the model's generalization capacity. Our approach achieves 100% human-level generalization on SCAN. Suppose we have only task data, I try to improve the model's performance so it can work without program supervision. This study also established a cost-effective pre-training method that uses only 2% of the pre-training data but surpasses earlier work by more than 2%, eventually approaching advanced baselines using program data. I finally investigate no-data cases. In this situation, I focus on swiftly building a model that consumers can trust. This research was then integrated into PowerApp and announced at Microsoft Build, allowing an expert to build a semantic parsing system with sufficient performance in 1 week, achieving exceptional performance.<br>
-                        <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: Sea AI Lab, Tencent AI Lab, Ali DAMO Academy, Microsoft Research Asia</span><br>
+                        <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: Sea AI Lab, Tencent AI Lab, DAMO Academy, Microsoft Research Asia</span><br>
                         <a class="tag" href="https://onedrive.live.com/view.aspx?resid=4FDAC7EFF42FC44E!29158&ithint=file%2cpptx&authkey=!AI_ZSgksJt3NLOY"
                            target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a></a>
                     </p>
@@ -264,6 +264,16 @@
                         <i class="fa fa-desktop" aria-hidden="true"></i> <b>Invited talk</b>: Use pre-trained language models for semantic parsing, including how to leverage grounding capabilities of language models to build interpretable semantic parser, how to learn latent program to help build cost-effective semantic parser and how to leverage generalization capabilities of language models to build synthesized semantic parser.<br>
                         <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: Shanghai Jiao Tong University</span><br>
                         <a class="tag" href="slides/SJTU-Talk-Qian.pdf"
+                           target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
+                    </p>
+                </div>
+
+                <div class="py-2">
+                    <p class="paper my-2 pl-2">
+                        <span class="papertitle">Catch Compositional Generalization in Deep Learning: Model, Meaning and Data</span><br>
+                        <i class="fa fa-desktop" aria-hidden="true"></i> <b>Invited talk</b>: This talk introduces a series of works done in our team for compositional generalization, from the perspective of model architecture, the intermediate representation and the data distribution.<br>
+                        <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: DAMO Academy</span><br>
+                        <a class="tag" href="slides/Compositional-Talk-Qian.pdf"
                            target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
                     </p>
                 </div>
