--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-8 pt-5 about">
             I am a Research Scientist at
-            <a class="in-text" href="https://sail.sea.com/" target="_blank"><img class="img-fluid instilogo p-1" src="images/sail_logo.png" style="width: 9em;height: 2.5em;">Sea AI Lab</a>, where I work with <a class="in-text" href="https://yanshuicheng.ai/" target="_blank">Shuicheng Yan</a>.
+            <a class="in-text" href="https://sail.sea.com/" target="_blank"><img class="img-fluid instilogo p-1" src="images/sail_logo.png" style="width: 9em;height: 2.5em;">Sea AI Lab</a>, where I work with <a class="in-text" href="https://yanshuicheng.ai/" target="_blank">Prof. Shuicheng Yan</a>.
             <br><br>
             My primary research interests are in natural language processing, particularly <i class="fa fa-file-code-o" aria-hidden="true"></i> semantic parsing, <i class="fa fa-table" aria-hidden="true"></i> table pre-training and <i class="fa fa-magic" aria-hidden="true"></i> natural langauge reasoning.<br> <br>
 
@@ -74,6 +74,7 @@
             on my <a class="in-text" href="mailto:liuqian.sea@gmail.com">email</a>.
             <br>
             <p class="header pt-5">✨ News </p>
+            <p class="paper my-2 pl-2">🌠 I am currently hiring research interns in Singapore, which are also open to oversea candidates if you can do 1-year internship. Please do not hesitate to contact me if you are interested in my background, with the subject line "<b>Research Intern + [Expected Start Time] + [Expected Duration] + [Topic]</b>" and your resume. You can find the email at this website! </p>
             <p class="paper my-2 pl-2">4 papers (numerical reasoning, spatial reasoning, table retrieval & semantic parsing) got accepted by EMNLP 2022!</p>
             <p class="paper my-2 pl-2">2 papers (open-domain question answering & task-oriented dialogue) got accepted by IJCAI 2022!</p>
             <p class="paper my-2 pl-2">1 paper on table pre-training got accepted by ICLR 2022!</p>
@@ -163,7 +164,7 @@
                      <span class="papertitle">Compositional Generalization by Learning Analytical Expressions</span><br>
                     <span class="thisauthor">Qian Liu*</span>, Shengnan An*, Jian-Guang Lou, Bei Chen, Zeqi Lin, Yan Gao, Bin Zhou, Nanning Zheng, Dongmei Zhang
                     <span class="noter"> (* = Equal Contribution)</span><br>
-                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> First Paper to Achieve 100% Accuracy on <a class="confshort" href="https://paperswithcode.com/dataset/scan">SCAN</a></span><br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> Spotlight, First Paper to Achieve 100% Accuracy on <a class="confshort" href="https://paperswithcode.com/dataset/scan">SCAN</a></span><br>
                     <span class="conf"><a class="confshort" href="https://nips.cc/Conferences/2020">NeurIPS 2020</a> | Advances in Neural Information Processing Systems</span><br>
                     <a class="tag" href="http://proceedings.neurips.cc/paper/2020/file/83adc9225e4deb67d7ce42d58fe5157c-Paper.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
@@ -184,7 +185,7 @@
             <div class="py-2">
                 <p class="paper my-2 pl-2">
                      <span class="papertitle">You Impress Me: Dialogue Generation via Mutual Persona Perception</span><br>
-                    <span class="thisauthor">Qian Liu*</span>, Yihong Chen, Bei Chen, Jian-Guang Lou, Zixuan Chen, Bin Zhou, Dongmei Zhang
+                    <span class="thisauthor">Qian Liu</span>, Yihong Chen, Bei Chen, Jian-Guang Lou, Zixuan Chen, Bin Zhou, Dongmei Zhang
                     <span class="conf"><a class="confshort" href="https://2020.aclweb.org/">ACL 2020</a> | Association for Computational Linguistics</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2004.05388.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a><span class="tagsep">|</span>
                     <a class="tag" href="slides/ACL2020-You-Slides.pdf" target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
@@ -214,10 +215,10 @@
                         <i class="fa fa-desktop" aria-hidden="true"></i> <b>Thesis Talk</b>: Aiming at the challenging problems of small-scale program annotation, small-variety domain annotation, weak supervision of answer annotation and the difficulties of conversation annotation, we propose improving the program-oriented compositional generalization capabilities, improving the knowledge-base domain generalization capabilities, improving the performance of answer-driven semantic parsing model under weak supervision, and rapidly building conversational semantic parsing systems under semi-supervision.<br>
                         <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: Beihang University</span><br>
                         <a class="tag" href="slides/Thesis-Talk-Qian.pdf"
-                           target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
+                           target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides(Chinese)</a>
                         <span class="tagsep">|</span>
                         <a class="tag" href="slides/Thesis-Qian.pdf"
-                           target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Thesis PDF</a></a>
+                           target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Thesis PDF(Chinese)</a></a>
                     </p>
                 </div>
 
