--- a/index.html
+++ b/index.html
@@ -203,9 +203,11 @@
                     <p class="paper my-2 pl-2">
                         <span class="papertitle">Language Pre-training without Natural Language</span><br>
                         <i class="fa fa-desktop" aria-hidden="true"></i> <b>Invited Talk</b>: In recent years, language model pre-training has achieved great success via large-scale textual data. By employing pre-training tasks such as masked language modeling, these models have demonstrated surprising performance on several downstream tasks. However, it is still very challenging for language models to perform reasoning since it is quite difficult to mine large-scale reasoning-oriented natural language corpus. In this talk, we call for the development of synthesizing pre-training corpus using programs, instead of natural language, as the pre-training source for reasoning. Experimental results show that our method can achieve significant improvements on tabular reasoning, numerical reasoning and spatial reasoning across various benchmarks.<br>
-                        <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: National University Singapore, Singapore University of Technology & Design</span><br>
-                        <a class="tag" href="slides/NUS-Talk-Qian.pdf"
+                        <span class="conf"><i class="fa fa-map-o" aria-hidden="true"></i> <b>Location</b>: Sigma Computing, National University Singapore, Singapore University of Technology & Design</span><br>
+                        <a class="tag" href="slides/Sigma-Talk-Qian.pdf"
                            target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
+                        <span class="tagsep">|</span>
+                        <a class="tag" href="https://drive.google.com/file/d/1k8aFAdo2s-TehEkKdOl9jM4rP4ODR0Fh/view" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video</a>
                     </p>
                 </div>
 
