--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             on my <a class="in-text" href="mailto:liuqian.sea@gmail.com">email</a>.
             <br>
             <p class="header pt-5">✨ News </p>
-            <p class="paper my-2 pl-2">🌠 I am currently hiring research interns in Singapore, which are also open to oversea candidates if you can do 1-year internship. Please do not hesitate to contact me if you are interested in my background, with the subject line "<b>Research Intern + [Expected Start Time] + [Expected Duration] + [Topic]</b>" and your resume. You can find the email at this website! </p>
-            <p class="paper my-2 pl-2">4 papers (numerical reasoning, spatial reasoning, table retrieval & semantic parsing) got accepted by EMNLP 2022!</p>
-            <p class="paper my-2 pl-2">2 papers (open-domain question answering & task-oriented dialogue) got accepted by IJCAI 2022!</p>
-            <p class="paper my-2 pl-2">1 paper on table pre-training got accepted by ICLR 2022!</p>
+            <p class="paper my-2 pl-2">[2022.10] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;"> I am currently hiring research interns in Singapore and China. Please do not hesitate to contact me if you are interested in my background, with the subject line "<b>Research Intern + Your Name</b>" with your resume. You can find the email at this website! </p>
+            <p class="paper my-2 pl-2">[2022.10] 4 papers (numerical reasoning, spatial reasoning, table retrieval & semantic parsing) got accepted by EMNLP 2022!</p>
+            <p class="paper my-2 pl-2">[2022.05] 2 papers (open-domain question answering & task-oriented dialogue) got accepted by IJCAI 2022!</p>
+            <p class="paper my-2 pl-2">[2021.12] 1 paper on table pre-training got accepted by ICLR 2022!</p>
 
             <p class="header pt-5">📝 Selected Publications (Full Publications on                     <a class="in-text" href="https://www.semanticscholar.org/author/Qian-Liu/1409707585">Scholar</a>) </p>
 
