udpate index page

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <a class="tag" href="slides/Sigma-Talk-Qian.pdf"
                            target="_blank"><i class="fa fa-flag" aria-hidden="true"></i> Slides</a>
                         <span class="tagsep">|</span>
-                        <a class="tag" href="https://drive.google.com/file/d/1k8aFAdo2s-TehEkKdOl9jM4rP4ODR0Fh/view" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video</a>
+                        <a class="tag" href="https://drive.google.com/file/d/18XsTNE4H2_0tLFnxP4jUnb2_6qeG-Suf/view?usp=share_link" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video</a>
                     </p>
                 </div>
 
