--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                     <br>
                     <span class="conf"><a class="confshort" href="https://2022.emnlp.org/">EMNLP 2022</a> | Empirical Methods in Natural Language Processing</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2201.11473.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://drive.google.com/file/d/1awBE9jUdxfcj4l4FL28dgzPmKNhDA0Ea/view?usp=share_link" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video</a>
                 </p>
             </div>
 
@@ -100,6 +102,8 @@
                     Qi Shi, <span class="thisauthor">Qian Liu</span>, Bei Chen, Yu Zhang, Ting Liu, Jian-Guang Lou
                     <span class="conf"><a class="confshort" href="https://2022.emnlp.org/">EMNLP 2022</a> | Empirical Methods in Natural Language Processing</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2201.08081.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://github.com/microsoft/ContextualSP/tree/master/lemon" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Code</a><span
                 </p>
             </div>
 
