--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-8 pt-5 about">
             I am a Research Scientist at
-            <a class="in-text" href="https://sail.sea.com/" target="_blank"><img class="img-fluid instilogo p-1" src="images/sail_logo.png" style="width: 9em;height: 2.5em;">Sea AI Lab</a>, where I work with many talented researchers.
+            <a class="in-text" href="https://sail.sea.com/" target="_blank"><img class="img-fluid instilogo p-1" src="images/sail_logo.png" style="width: 9em;height: 2.5em;">Sea AI Lab</a>, and I work with many talented researchers.
             <br><br>
             My primary research interests are in natural language processing, particularly <i class="fa fa-file-code-o" aria-hidden="true"></i> code generation, <i class="fa fa-table" aria-hidden="true"></i> table pre-training and <i class="fa fa-magic" aria-hidden="true"></i> natural langauge reasoning.<br> <br>
 
@@ -74,11 +74,12 @@
             on my <a class="in-text" href="mailto:liuqian.sea@gmail.com">email</a>.
             <br>
             <p class="header pt-5">✨ News </p>
-            <p class="paper my-2 pl-2">[2023.05] I am currently hiring research interns in Singapore and China. Please do not hesitate to contact me if you are interested in my background, with the subject line "<b>Research Intern + Your Name</b>" with your resume. You can find the email at this website!</p>
+            <p class="paper my-2 pl-2">[2023.05] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">I am currently hiring research interns in Singapore and China. Please do not hesitate to contact me if you are interested in my background, with the subject line "<b>Research Intern + Your Name</b>" with your resume. You can find the email at this website!</p>
+            <p class="paper my-2 pl-2">[2023.05] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">Please checkout our <a href="https://arxiv.org/abs/2305.09696">TapTap paper</a> to see how language models pre-trained on tables benefit machine learning models!</p>
             <p class="paper my-2 pl-2">[2023.05] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">The best open-source code pre-training model <a href="https://huggingface.co/bigcode/starcoder">StarCoder (15.5B)</a> was out! </p>
-            <p class="paper my-2 pl-2">[2023.04] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">Our preprint <a href="https://arxiv.org/abs/2304.07995">From Zero to Hero: Examining the Power of Symbolic Tasks in Instruction Tuning</a> was out! TL;DR: symbolic data is really powerful when paired with instruction tuning!</p>
-            <p class="paper my-2 pl-2">[2023.01] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">Our paper on Graph + Language is accepted by ICLR 2023 as <strong>Oral (5%)</strong>!</p>
-            <p class="paper my-2 pl-2">[2022.12] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">Our open-sourced code pre-training model <a href="https://huggingface.co/bigcode/santacoder">SantaCoder</a> was released!</p>
+            <p class="paper my-2 pl-2">[2023.04] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">Our preprint <a href="https://arxiv.org/abs/2304.07995">From Zero to Hero: Examining the Power of Symbolic Tasks in Instruction Tuning</a> was out! You can do instruction tuning even with symbolic data!</p>
+            <p class="paper my-2 pl-2">[2023.01] Our paper on Graph + Language is accepted by ICLR 2023 as <strong>Oral (5%)</strong>!</p>
+            <p class="paper my-2 pl-2">[2022.12] Our open-sourced code pre-training model <a href="https://huggingface.co/bigcode/santacoder">SantaCoder</a> was released!</p>
             <p class="paper my-2 pl-2">[2022.11] 1 paper using table as the eye 👀 for embodied agents 🤖️ is accepted by AAAI 2023!</p>
             <p class="paper my-2 pl-2">[2022.10] 4 papers (numerical reasoning, spatial reasoning, table retrieval & semantic parsing) got accepted by EMNLP 2022!</p>
             <p class="paper my-2 pl-2">[2022.05] 2 papers (open-domain question answering & task-oriented dialogue) got accepted by IJCAI 2022!</p>
@@ -88,11 +89,23 @@
 
             <div class="py-2">
                 <p class="paper my-2 pl-2">
+                    <span class="papertitle"><a href="https://arxiv.org/abs/2305.09696">Generative Table Pre-training Empowers Models for Tabular Prediction</a></span>
+                    <br>
+                    Tianping Zhang, Shaowen Wang, Shuicheng Yan, Jian Li, <span class="thisauthor">Qian Liu</span>
+                    <br>
+                    <a class="tag" href="https://arxiv.org/pdf/2305.09696.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://github.com/ZhangTP1996/TapTap" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Code</a>
+                </p>
+            </div>
+
+            <div class="py-2">
+                <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2305.06161">StarCoder: may the source be with you!</a></span>
                     <br>
                     Raymond Li, Loubna Ben Allal, Yangtian Zi, Niklas Muennighoff, Denis Kocetkov, Chenghao Mou, Marc Marone, Christopher Akiki, Jia Li, Jenny Chim, <span class="thisauthor">Qian Liu</span>, Evgenii Zheltonozhskii, Terry Yue Zhuo, Thomas Wang, Olivier Dehaene, Mishig Davaadorj, Joel Lamy-Poirier, João Monteiro, Oleh Shliazhko, Nicolas Gontier, Nicholas Meade, Armel Zebaze, Ming-Ho Yee, Logesh Kumar Umapathi, Jian Zhu, Benjamin Lipkin, Muhtasham Oblokulov, Zhiruo Wang, Rudra Murthy, Jason Stillerman, Siva Sankalp Patel, Dmitry Abulkhanov, Marco Zocca, Manan Dey, Zhihan Zhang, Nour Fahmy, Urvashi Bhattacharyya, Wenhao Yu, Swayam Singh, Sasha Luccioni, Paulo Villegas, Maxim Kunakov, Fedor Zhdanov, Manuel Romero, Tony Lee, Nadav Timor, Jennifer Ding, Claire Schlesinger, Hailey Schoelkopf, Jan Ebert, Tri Dao, Mayank Mishra, Alex Gu, Jennifer Robinson, Carolyn Jane Anderson, Brendan Dolan-Gavitt, Danish Contractor, Siva Reddy, Daniel Fried, Dzmitry Bahdanau, Yacine Jernite, Carlos Muñoz Ferrandis, Sean Hughes, Thomas Wolf, Arjun Guha, Leandro von Werra, Harm de Vries
                     <br>
-                    <span class="conf"><a class="confshort" href="https://arxiv.org/abs/2305.06161">Preprint</a></span><br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> The Best Open-Access Code Pre-training Model</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2305.06161.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://github.com/bigcode-project/starcoder" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Code</a>
@@ -105,7 +118,6 @@
                     <br>
                     <span class="thisauthor">Qian Liu*</span>, Fan Zhou*, Zhengbao Jiang, Longxu Dou, Min Lin
                     <br>
-                    <span class="conf"><a class="confshort" href="https://arxiv.org/abs/2304.07995">Preprint</a></span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2304.07995.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://github.com/sail-sg/symbolic-instruction-tuning" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Code</a>
@@ -131,7 +143,7 @@
                     <br>
                     Loubna Ben Allal, Raymond Li, Denis Kocetkov, Chenghao Mou, Christopher Akiki, Carlos Munoz Ferrandis, Niklas Muennighoff, Mayank Mishra, Alex Gu, Manan Dey, Logesh Kumar Umapathi, Carolyn Jane Anderson, Yangtian Zi, Joel Lamy Poirier, Hailey Schoelkopf, Sergey Troshin, Dmitry Abulkhanov, Manuel Romero, Michael Lappert, Francesco De Toni, Bernardo García del Río, <span class="thisauthor">Qian Liu</span>, Shamik Bose, Urvashi Bhattacharyya, Terry Yue Zhuo, Ian Yu, Paulo Villegas, Marco Zocca, Sourab Mangrulkar, David Lansky, Huu Nguyen, Danish Contractor, Luis Villa, Jia Li, Dzmitry Bahdanau, Yacine Jernite, Sean Hughes, Daniel Fried, Arjun Guha, Harm de Vries, Leandro von Werra
                     <br>
-                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> Open-sourced code pre-training model</span><br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> Open-sourced Code Pre-training Model</span><br>
 <!--                    <span class="conf"><a class="confshort" href="https://arxiv.org/abs/2301.03988">arxiv </a> <br>-->
                     <a class="tag" href="https://arxiv.org/pdf/2301.03988.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
