--- a/index.html
+++ b/index.html
@@ -100,6 +100,24 @@
                 </p>
             </div>
 
+
+            <div class="py-2">
+                <p class="paper my-2 pl-2">
+                    <span class="papertitle"><a href="https://arxiv.org/abs/2310.10634">OpenAgents: An Open Platform for Language Agents in the Wild</a></span>
+                    <br>
+                    Tianbao Xie*, Fan Zhou*, Zhoujun Cheng*, Peng Shi*, Luoxuan Weng*, Yitao Liu*, Toh Jing Hua, Junning Zhao, <span class="thisauthor">Qian Liu</span>, Che Liu, Leo Z. Liu, Yiheng Xu, Hongjin Su, Dongchan Shin, Caiming Xiong, Tao Yu
+                    <span class="noter"> (* = Equal Contribution)</span><br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> The Open-Source ChatGPT Plugin / Advanced Data Analysis Framework</span><br>
+                    <a class="tag" href="https://arxiv.org/pdf/2310.10634.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://github.com/xlang-ai/OpenAgents" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://chat.xlang.ai/" target="_blank"><i class="fa fa-home" aria-hidden="true"></i> Homepage</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://www.youtube.com/watch?v=FyzmPcHkvJU" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Video</a>
+                </p>
+            </div>
+
             <div class="py-2">
                 <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2310.06830">Lemur: Harmonizing Natural Language and Code for Language Agents</a></span>
