--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="menulink" href="assets/qian_cv.pdf" target="_blank">Resume</a></div>
                 <div class="">
                     <i aria-hidden="true" class="fa fa-graduation-cap"></i>
-                    <a class="menulink" href="https://www.semanticscholar.org/author/Qian-Liu/1409707585"
+                    <a class="menulink" href="https://scholar.google.com/citations?user=bcbeUo0AAAAJ&hl=en"
                                  target="_blank">Scholar</a></div>
                 <div class="">
                     <i aria-hidden="true" class="fa fa-envelope"></i>
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-8 pt-5 about">
             I am a Research Scientist (NLP) at the
-            <a class="in-text" href="https://sail.sea.com/" target="_blank"><img class="img-fluid instilogo p-1" src="images/sail_logo.png" style="width: 6em;height: 2em;">Sea AI Lab</a>, an industry research lab based in Singapore 🇸🇬. Currently we are still actively seeking (Senior) Research Scientists / Research Interns for all directions to join our team, and we encourage you to reach out if you are interested. Please don't hesitate to send me an email for further details or to express your interest.
+            <a class="in-text" href="https://sail.sea.com/" target="_blank"><img class="img-fluid instilogo p-1" src="images/sail_logo.png" style="width: 6em;height: 2em;">Sea AI Lab</a>, an industry research lab based in Singapore 🇸🇬. Currently we are still actively seeking (Senior) Research Scientists for all directions to join our team, and we encourage you to reach out if you are interested. Please don't hesitate to send me an email for further details or to express your interest.
             
             <br><br>
             My primary research interests are in natural language processing, particularly <i class="fa fa-file-code-o" aria-hidden="true"></i> code generation, <i class="fa fa-table" aria-hidden="true"></i> table pre-training and <i class="fa fa-magic" aria-hidden="true"></i> natural langauge reasoning.
