--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <meta content="Research Scientist, Sea AI Lab" name="description">
+    <meta content="Researcher, TikTok" name="description">
     <meta content="Qian Liu" name="author">
     <meta content="#222222" name="theme-color">
 
@@ -15,7 +15,7 @@
     <link href="assets/style-2.css" rel="stylesheet">
     <link href="assets/font-awesome.min.css" rel="stylesheet">
 
-    <title>Qian Liu @ Sea AI Lab (Updated on Nov. 2023) </title>
+    <title>Qian Liu @ TikTok (Updated on Jan. 2025) </title>
 </head>
 <body>
 <!-- <h1>Hello, world!</h1> -->
@@ -52,8 +52,7 @@
         </div>
         <div class="col-md-8 pt-5 about">
             I am a Researcher at TikTok AI Invovation Center, an industry research lab based in Singapore 🇸🇬. Currently we are still actively seeking (Senior) Researchers for Code AI to join our team, and we encourage you to reach out if you are interested. Please don't hesitate to send me an email for further details or to express your interest.
-            Previously I was a Research Scientist (NLP) at the
-            <a class="in-text" href="https://sail.sea.com/" target="_blank"><img class="img-fluid instilogo p-1" src="images/sail_logo.png" style="width: 6em;height: 2em;">Sea AI Lab</a>, focusing on multi-lingual language models (Sailor, Sailor2).
+            Previously I was a Research Scientist (NLP) at Sea AI Lab, focusing on multi-lingual language models (Sailor, Sailor2).
 
             <br><br>
             My primary research interests are in natural language processing, particularly <i class="fa fa-file-code-o" aria-hidden="true"></i> code generation, <i class="fa fa-table" aria-hidden="true"></i> table pre-training and <i class="fa fa-magic" aria-hidden="true"></i> natural langauge reasoning.
