update scaling paper news

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             on my <a class="in-text" href="mailto:liuqian.sea@gmail.com">email</a>.
             <br>
             <p class="header pt-5">✨ News </p>
+            <p class="paper my-2 pl-2">[2024.12] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">We have presented Scaling Laws with Vocabulary paper in NeurIPS 2024!</p>
             <p class="paper my-2 pl-2">[2024.11] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">Please checkout our <a href="https://arxiv.org/abs/2411.04905">OpenCoder</a>, the open cookbook for top-tier code large language models!</p>
             <!-- <p class="paper my-2 pl-2">[2022.05] 2 papers (open-domain question answering & task-oriented dialogue) got accepted by IJCAI 2022!</p> -->
             <!-- <p class="paper my-2 pl-2">[2021.12] 1 paper on table pre-training got accepted by ICLR 2022!</p> -->
@@ -122,7 +123,7 @@
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://huggingface.co/collections/gair-prox/prox-dataset-66e81c9d560911b836bb3704" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Dataset</a>
                     <span class="tagsep">|</span>
-                    <a class="tag" href="https://huggingface.co/collections/gair-prox/prox-refining-models-6707cf820a16d830fbf434dd" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Refine Model</a>
+                    <a class="tag" href="https://huggingface.co/collections/gair-prox/prox-refining-models-6707cf820a16d830fbf434dd" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Data Quality Models</a>
                 </p>
             </div>
             
@@ -130,6 +131,7 @@
                 <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2407.13623">Scaling Laws with Vocabulary: Larger Models Deserve Larger Vocabularies</a></span><br>
                     Chaofan Tao, <span class="thisauthor">Qian Liu</span>, Longxu Dou, Niklas Muennighoff, Zhongwei Wan, Ping Luo, Min Lin, Ngai Wong<br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> NeurIPS 2024</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2407.13623.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://github.com/sail-sg/scaling-with-vocab" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
@@ -147,7 +149,7 @@
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://github.com/sail-sg/regmix" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
                     <span class="tagsep">|</span>
-                    <a class="tag" href="https://huggingface.co/collections/sail/regmix-data-mixture-as-regression-6682b6caab37b9442877f0ce" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Artifacts</a>
+                    <a class="tag" href="https://huggingface.co/collections/sail/regmix-data-mixture-as-regression-6682b6caab37b9442877f0ce" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Dataset</a>
                 </p>
             </div>
             
