minior updates on recruiting

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <br><br>
             <blockquote style="border-left: 4px solid grey; padding-left: 10px; margin: 0 5px">
-                🚀 We're growing our code research team and actively recruiting Researchers. If you're passionate about advancing the future of research, I'd be happy to discuss opportunities - feel free to reach out via email qian dot liu at bytedance dot com ✉️
+                🚀 We're growing our code research team and actively recruiting Researchers. If you're passionate about advancing the future of code ai, I'd be happy to discuss opportunities - feel free to reach out via email qian dot liu at bytedance dot com ✉️
             </blockquote>
             <br>
             My primary research interests are in natural language processing, particularly <i class="fa fa-file-code-o" aria-hidden="true"></i> code generation, <i class="fa fa-table" aria-hidden="true"></i> table pre-training and <i class="fa fa-magic" aria-hidden="true"></i> natural langauge reasoning.
