udpate sailor related staff

--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
                     <a class="tag" href="https://github.com/sail-sg/regmix" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://huggingface.co/collections/sail/regmix-data-mixture-as-regression-6682b6caab37b9442877f0ce" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Dataset</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://huggingface.co/spaces/sail/regmix" target="_blank"><i class="fa fa-desktop" aria-hidden="true"></i> Demo</a>
                 </p>
             </div>
             
@@ -165,6 +167,23 @@
 
             <div class="py-2">
                 <p class="paper my-2 pl-2">
+                    <span class="papertitle"><a href="https://arxiv.org/abs/2404.03608">Sailor: Open Language Models for South-East Asia</a></span><br>
+                    Longxu Dou*, <span class="thisauthor">Qian Liu</span>*, Guangtao Zeng, Jia Guo, Jiahui Zhou, Xin Mao, Ziqi Jin, Wei Lu, Min Lin<br>
+                    <span class="noter"> (* = Equal Contribution)</span><br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> EMNLP 2024 (Demo)</span><br>
+                    <a class="tag" href="https://arxiv.org/pdf/2404.03608.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://sea-sailor.github.io/blog/sailor1" target="_blank"><i class="fa fa-book" aria-hidden="true"></i> Blog</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://github.com/sail-sg/sailor-llm" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://sailor.insea.io/" target="_blank"><i class="fa fa-desktop" aria-hidden="true"></i> Chat with Sailor</a>
+                </p>
+            </div>
+
+
+            <div class="py-2">
+                <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2402.19173">StarCoder 2 and The Stack v2: The Next Generation</a></span>
                     <br>
                     Anton Lozhkov, Raymond Li, Loubna Ben Allal, Federico Cassano, Joel Lamy-Poirier, Nouamane Tazi, Ao Tang, Dmytro Pykhtar, Jiawei Liu, Yuxiang Wei, Tianyang Liu, Max Tian, Denis Kocetkov, Arthur Zucker, Younes Belkada, Zijian Wang, <span class="thisauthor">Qian Liu</span>, Dmitry Abulkhanov, Indraneil Paul, Zhuang Li, Wen-Ding Li, Megan Risdal, Jia Li, Jian Zhu, Terry Yue Zhuo, Evgenii Zheltonozhskii, Nii Osae Osae Dade, Wenhao Yu, Lucas Krauß, Naman Jain, Yixuan Su, Xuanli He, Manan Dey, Edoardo Abati, Yekun Chai, Niklas Muennighoff, Xiangru Tang, Muhtasham Oblokulov, Christopher Akiki, Marc Marone, Chenghao Mou, Mayank Mishra, Alex Gu, Binyuan Hui, Tri Dao, Armel Zebaze, Olivier Dehaene, Nicolas Patry, Canwen Xu, Julian McAuley, Han Hu, Torsten Scholak, Sebastien Paquet, Jennifer Robinson, Carolyn Jane Anderson, Nicolas Chapados, Mostofa Patwary, Nima Tajbakhsh, Yacine Jernite, Carlos Muñoz Ferrandis, Lingming Zhang, Sean Hughes, Thomas Wolf, Arjun Guha, Leandro von Werra, Harm de Vries
@@ -172,6 +191,8 @@
                     <a class="tag" href="https://arxiv.org/pdf/2402.19173.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://huggingface.co/blog/starcoder2" target="_blank"><i class="fa fa-book" aria-hidden="true"></i> Blog</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://huggingface.co/bigcode/starcoder2-15b" target="_blank"><i class="fa fa-download" aria-hidden="true"></i> Model</a>
                 </p>
             </div>
 
@@ -181,6 +202,8 @@
                     Zhaorui Yang, Tianyu Pang, Haozhe Feng, Han Wang, Wei Chen, Minfeng Zhu, <span class="thisauthor">Qian Liu</span><br>
                     <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> ACL 2024</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2402.13669.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://github.com/sail-sg/sdft" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
                 </p>
             </div>
             
@@ -188,7 +211,10 @@
                 <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2403.07805">Beyond Memorization: The Challenge of Random Memory Access in Language Models</a></span><br>
                     Tongyao Zhu, <span class="thisauthor">Qian Liu</span>, Liang Pang, Zhengbao Jiang, Min-Yen Kan, Min Lin<br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> ACL 2024</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2403.07805.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
+                    <span class="tagsep">|</span>
+                    <a class="tag" href="https://github.com/sail-sg/lm-random-memory-access" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
                 </p>
             </div>
 
@@ -198,7 +224,7 @@
                     <br>
                     Fangyu Lei*, <span class="thisauthor">Qian Liu*</span>, Yiming Huang*, Shizhu He, Jun Zhao, Kang Liu 
                     <span class="noter"> (* = Equal Contribution)</span><br>
-                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> The Benchmark with Unlimited Examples and Infinite Context Length</span><br>
+                    <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> NAACL 2024</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2310.15147.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
                     <a class="tag" href="https://github.com/lfy79001/S3Eval" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i> Github</a>
