add <br> in octopack

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2308.07124">OctoPack: Instruction Tuning Code Large Language Models</a></span>
                     <br>
-                    Niklas Muennighoff, <span class="thisauthor">Qian Liu</span>, Armel Zebaze, Qinkai Zheng, Binyuan Hui, Terry Yue Zhuo, Swayam Singh, Xiangru Tang, Leandro von Werra, Shayne Longpre
+                    Niklas Muennighoff, <span class="thisauthor">Qian Liu</span>, Armel Zebaze, Qinkai Zheng, Binyuan Hui, Terry Yue Zhuo, Swayam Singh, Xiangru Tang, Leandro von Werra, Shayne Longpre<br>
                     <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> ICLR 2024 (Spotlight)</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2308.07124.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
