--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2305.09696">Generative Table Pre-training Empowers Models for Tabular Prediction</a></span>
                     <br>
-                    Tianping Zhang, Shaowen Wang, Shuicheng Yan, Jian Li, <span class="thisauthor">Qian Liu</span>
+                    Tianping Zhang, Shaowen Wang, Shuicheng Yan, Jian Li, <span class="thisauthor">Qian Liu</span> <br>
                     <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> EMNLP 2023 </span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2305.09696.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
                     <span class="tagsep">|</span>
