note inside the same line in sailor

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="py-2">
                 <p class="paper my-2 pl-2">
                     <span class="papertitle"><a href="https://arxiv.org/abs/2404.03608">Sailor: Open Language Models for South-East Asia</a></span><br>
-                    Longxu Dou*, <span class="thisauthor">Qian Liu</span>*, Guangtao Zeng, Jia Guo, Jiahui Zhou, Xin Mao, Ziqi Jin, Wei Lu, Min Lin<br>
+                    Longxu Dou*, <span class="thisauthor">Qian Liu</span>*, Guangtao Zeng, Jia Guo, Jiahui Zhou, Xin Mao, Ziqi Jin, Wei Lu, Min Lin
                     <span class="noter"> (* = Equal Contribution)</span><br>
                     <span class="conf"><i class="fa fa-trophy" aria-hidden="true"></i> EMNLP 2024 (Demo)</span><br>
                     <a class="tag" href="https://arxiv.org/pdf/2404.03608.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>
